// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for ProductTableRow component: should render the ProductTableRow component and match snapshot 1`] = `
<div>
  <div
    class="product-table-row"
    data-testid="product-table-row-Test Product"
  >
    <div
      class="details-arrow"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9997 13.1714L16.9495 8.22168L18.3637 9.63589L11.9997 15.9999L5.63574 9.63589L7.04996 8.22168L11.9997 13.1714Z"
        />
      </svg>
    </div>
    <div>
      <p>
        Test Product
      </p>
    </div>
    <div
      class="table-bb-section"
    >
      <div>
        <div
          class="table-bb-image"
          style="width: 0px;"
        >
          <div
            class="imageWrapper"
            data-tooltip-content="Messaging"
            data-tooltip-id="text-tooltip"
            data-tooltip-offset="1"
          >
            <div
              class="bb-image"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M144 208c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zm112 0c-17.7 0-32 14.3-32 32s14.3 32 32 32 32-14.3 32-32-14.3-32-32-32zM256 32C114.6 32 0 125.1 0 240c0 47.6 19.9 91.2 52.9 126.3C38 405.7 7 439.1 6.5 439.5c-6.6 7-8.4 17.2-4.6 26S14.4 480 24 480c61.5 0 110-25.7 139.1-46.3C192 442.8 223.2 448 256 448c141.4 0 256-93.1 256-208S397.4 32 256 32zm0 368c-26.7 0-53.1-4.1-78.4-12.1l-22.7-7.2-19.5 13.8c-14.3 10.1-33.9 21.4-57.5 29 7.3-12.1 14.4-25.7 19.9-40.2l10.6-28.1-20.6-21.8C69.7 314.1 48 282.2 48 240c0-88.2 93.3-160 208-160s208 71.8 208 160-93.3 160-208 160z"
                />
              </svg>
            </div>
            <div
              class="text-tooltip"
            />
          </div>
        </div>
        <div>
          <div
            class="overflow-count"
            data-testid="bb-rest-count"
            data-tooltip-content="Messaging"
            data-tooltip-id="text-tooltip"
          >
            <p>
              +1
            </p>
            <div
              class="text-tooltip"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="product-last-update"
    >
      <p
        class="product-last-update"
      >
        2/12/2023
      </p>
    </div>
    <div
      data-testid="product-overall-compatibility"
    >
      <p>
        23%
      </p>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ProductTableRow component: when product compatibilities length is equal to 0. 1`] = `
<div>
  <div
    class="product-table-row"
    data-testid="product-table-row-Test Product"
  >
    <div
      class="details-arrow"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9997 13.1714L16.9495 8.22168L18.3637 9.63589L11.9997 15.9999L5.63574 9.63589L7.04996 8.22168L11.9997 13.1714Z"
        />
      </svg>
    </div>
    <div>
      <p>
        Test Product
      </p>
    </div>
    <div
      class="table-bb-section"
    >
      <div>
        <div
          class="table-bb-image"
          style="width: 75%;"
        />
        <div />
      </div>
    </div>
    <div
      data-testid="product-last-update"
    >
      <p
        class="product-last-update"
      >
        2/12/2023
      </p>
    </div>
    <div
      data-testid="product-overall-compatibility"
    >
      <p>
        23%
      </p>
    </div>
  </div>
</div>
`;
